# radiometric_thermal_sim

./: .gitignore  README.md  setup.sh
models/rescue_randy/: model.sdf
plugins/radiometric_depth_sensor/: CMakeLists.txt
plugins/radiometric_depth_sensor/src/: RadiometricDepthSensor.cc
plugins/radiometric_thermal_sensor/: CMakeLists.txt
rgbt_sim/Rescue Randy/: orbit.py  save_image.cc  thermalRandy.sdf
rgbt_sim/RescueRandy/: gazeboRescueRandy.sdf  orbit_save.py  rescueRandy.sdf  thermalRandy.sdf
rgbt_sim/RescueRandy/custom_sensor/: CMakeLists.txt  copy.cc  thermalRandy.sdf
rgbt_sim/RescueRandy/custom_sensor/src/: RadiometricThermalSensor.cc  RadiometricThermalSensor.hh
rgbt_sim/RescueRandy/custom_sensor/thermal_radiometric/: thermal_0.raw  thermal_5.raw
rgbt_sim/RescueRandy/new_custom_plugin/: CMakeLists.txt  camera_poses.csv  get_pose.py  png_to_radiometric.py  raw_to_png.py  read.py  test.sdf  test_pdb.py  thermalRandy.sdf
rgbt_sim/RescueRandy/new_custom_plugin/dataset/radiometric/: thermal_0.raw  thermal_105.raw  thermal_108.raw  thermal_109.raw  thermal_116.raw  thermal_124.raw  thermal_13.raw  thermal_130.raw  thermal_136.raw  thermal_140.raw  thermal_144.raw  thermal_146.raw  thermal_151.raw  thermal_158.raw  thermal_166.raw  thermal_175.raw  thermal_177.raw  thermal_178.raw  thermal_18.raw  thermal_185.raw  thermal_188.raw  thermal_190.raw  thermal_193.raw  thermal_198.raw  thermal_201.raw  thermal_204.raw  thermal_211.raw  thermal_217.raw  thermal_218.raw  thermal_226.raw  thermal_23.raw  thermal_232.raw  thermal_234.raw  thermal_24.raw  thermal_244.raw  thermal_248.raw  thermal_249.raw  thermal_251.raw  thermal_254.raw  thermal_259.raw  (+76 more)
rgbt_sim/RescueRandy/new_custom_plugin/src/: RadiometricThermalSensor.cc
rgbt_sim/RescueRandy/new_custom_plugin/thermal_radiometric/: thermal_0.raw  thermal_1005.raw  thermal_1009.raw  thermal_1019.raw  thermal_1024.raw  thermal_1028.raw  thermal_1030.raw  thermal_1043.raw  thermal_1051.raw  thermal_1065.raw  thermal_1070.raw  thermal_1076.raw  thermal_1078.raw  thermal_1081.raw  thermal_1186.raw  thermal_1234.raw  thermal_1280.raw  thermal_1285.raw  thermal_129.raw  thermal_1305.raw  thermal_132.raw  thermal_1462.raw  thermal_178.raw  thermal_220.raw  thermal_297.raw  thermal_3206.raw  thermal_405.raw  thermal_447.raw  thermal_456.raw  thermal_582.raw  thermal_587.raw  thermal_588.raw  thermal_596.raw  thermal_611.raw  thermal_617.raw  thermal_625.raw  thermal_628.raw  thermal_634.raw  thermal_635.raw  thermal_639.raw  (+63 more)
scripts/: aeriel_path.py  orbit.py  png_to_radiometric.py
worlds/: thermalRandy.sdf
